// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Recipes Component when \`useFetch\` is awaiting promise to resolve displays \`Loading...\` 1`] = `
<div>
  <section>
    <h2
      class="congress-header"
    >
      Congressional Information
    </h2>
    <section
      class="congress-header"
    >
      Loading...
    </section>
  </section>
</div>
`;

exports[`Recipes Component when \`useFetch\` returns data when 500 status returned displays error messaging 1`] = `
<div>
  <section>
    <h2
      class="congress-header"
    >
      Congressional Information
    </h2>
    <section>
      <h3>
        Whoops! There was a problem loading
         
        Congress data.
      </h3>
      <p>
        Please reload browser to try again in a little bit.
      </p>
    </section>
  </section>
</div>
`;
